snapshot-tests/tests/snapshots/parser__signed_radix__neg_oct.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-integer]: 
  ┌─ neg_oct:1:5
  │
1 │ a = -0o0
  │     ^^^^ invalid integer: signs are not allowed on prefixed integers
